2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/usermod.c: Check if the user is busy when the user's
	UID, name or home directory is changed.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, libmisc/user_busy.c, libmisc/Makefile.am,
	lib/prototypes.h: Move user_busy() to libmisc/user_busy.c.
	* NEWS, libmisc/user_busy.c: On Linux, do not check if an user is
	logged in with utmp, but check if the user is running some
	processes. If not on Linux, continue to search for an utmp record,
	but make sure the process recorded in the utmp entry is still
	running.

2009-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: Document the -m/--move-home option.

2009-05-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c (user_busy): Check if the process registered in
	utmp is still running. This avoids rejecting the removal of an
	user when UTMP was not updated and indicate that the user is still
	logged in.

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, libmisc/console.c (console): Remove the leading /dev/ from
	the tty before comparing with the lines specified by CONSOLE.
	* src/su.c: Do not remove the /dev/ prefix since it is done by
	console().

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/CONSOLE.xml: Document the format of the CONSOLE
	file.

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/login.c: Fix failure of non PAM enabled versions when
	an empty username is entered after a first prompt.

2009-05-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Added missing end of line at the end of success
	messages.

2009-05-16  sacha  <sachall@infonie.fr>

	* po/fr.po: Fixed typo in the vipw usage string.

2009-05-12  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/shell.c: Removed invalid code that executed the user's